--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/enterText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="@string/enter_text"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="37dp"></EditText>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/copyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/copy_to_clipboard"
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="34dp" />
+
+    <Button
+        android:id="@+id/translateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/another_text_layout"
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="34dp" />
+
+    <TextView
+        android:id="@+id/anotherLayoutTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/another_text_layout" />
+
+    <CheckBox
+        android:id="@+id/bigEngCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password_generation_big_eng"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="443dp" />
+
+    <CheckBox
+        android:id="@+id/numbersCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password_generation_numbers"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="387dp" />
+
+    <CheckBox
+        android:id="@+id/specialSymbCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password_generation_special_symb"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="491dp" />
+
+    <Button
+        android:id="@+id/passwordGenerateButton"
+        android:layout_width="174dp"
+        android:layout_height="62dp"
+        android:text="@string/password_generation_generate"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="553dp" />
+
+</LinearLayout>
