--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,18 @@
         tools:layout_editor_absoluteX="184dp"
         tools:layout_editor_absoluteY="34dp" />
 
+    <TextView
+        android:id="@+id/anotherLayoutTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/paste_text" />
+
+    <Button
+        android:id="@+id/pasteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/paste_from_clipboard" />
+
     <Button
         android:id="@+id/translateButton"
         android:layout_width="wrap_content"
@@ -30,12 +42,6 @@
         android:text="@string/another_text_layout"
         tools:layout_editor_absoluteX="184dp"
         tools:layout_editor_absoluteY="34dp" />
-
-    <TextView
-        android:id="@+id/anotherLayoutTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/another_text_layout" />
 
     <CheckBox
         android:id="@+id/bigEngCheckBox"
