debug: NPE on getString R.string, initial logic for password

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,10 @@
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="553dp" />
 
+    <TextView
+        android:id="@+id/readyPasswordTextView"
+        android:layout_width="88dp"
+        android:layout_height="36dp"
+        android:text="@string/ready_password" />
+
 </LinearLayout>
