--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,14 @@
         tools:layout_editor_absoluteX="184dp"
         tools:layout_editor_absoluteY="34dp" />
 
+    <EditText
+        android:id="@+id/numOfSymbolsInPswd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/symbols_in_pswd"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="37dp"></EditText>
+
     <CheckBox
         android:id="@+id/bigEngCheckBox"
         android:layout_width="wrap_content"
@@ -77,8 +85,8 @@
 
     <TextView
         android:id="@+id/readyPasswordTextView"
-        android:layout_width="88dp"
-        android:layout_height="36dp"
+        android:layout_width="159dp"
+        android:layout_height="29dp"
         android:text="@string/ready_password" />
 
 </LinearLayout>
