--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,46 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pswdStrengthProgressBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/enterText"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_text"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="37dp"></EditText>
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/copyButton"
+        <EditText
+            android:id="@+id/enterText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_text"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="37dp"></EditText>
+
+        <Button
+            android:id="@+id/copyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/copy_to_clipboard"
+            tools:layout_editor_absoluteX="184dp"
+            tools:layout_editor_absoluteY="34dp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/copy_to_clipboard"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="34dp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/anotherLayoutTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/paste_text" />
+        <TextView
+            android:id="@+id/anotherLayoutTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/paste_text" />
 
-    <Button
-        android:id="@+id/pasteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/paste_from_clipboard" />
+        <Button
+            android:id="@+id/pasteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/paste_from_clipboard" />
 
-    <Button
-        android:id="@+id/translateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/another_text_layout"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="34dp" />
+        <Button
+            android:id="@+id/translateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/another_text_layout"
+            tools:layout_editor_absoluteX="184dp"
+            tools:layout_editor_absoluteY="34dp" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/numOfSymbolsInPswd"
@@ -51,29 +65,41 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="37dp"></EditText>
 
-    <CheckBox
-        android:id="@+id/bigEngCheckBox"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password_generation_big_eng"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="443dp" />
+        android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/numbersCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password_generation_numbers"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="387dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <CheckBox
-        android:id="@+id/specialSymbCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password_generation_special_symb"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="491dp" />
+            <CheckBox
+                android:id="@+id/numbersCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/password_generation_numbers"
+                tools:layout_editor_absoluteX="36dp"
+                tools:layout_editor_absoluteY="387dp" />
+
+            <CheckBox
+                android:id="@+id/specialSymbCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/password_generation_special_symb"
+                tools:layout_editor_absoluteX="36dp"
+                tools:layout_editor_absoluteY="491dp" />
+
+            <CheckBox
+                android:id="@+id/bigEngCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/password_generation_big_eng"
+                tools:layout_editor_absoluteX="36dp"
+                tools:layout_editor_absoluteY="443dp" />
+        </LinearLayout>
+
+    </FrameLayout>
 
     <Button
         android:id="@+id/passwordGenerateButton"
@@ -88,5 +114,12 @@
         android:layout_width="159dp"
         android:layout_height="29dp"
         android:text="@string/ready_password" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="250dp"
+        android:layout_height="24dp"
+        android:background="#95D3CD" />
 
 </LinearLayout>
