--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/another_text_layout"
+            android:textSize="8sp"
             tools:layout_editor_absoluteX="184dp"
             tools:layout_editor_absoluteY="34dp" />
     </LinearLayout>
