--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_text"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="36dp"></EditText>
+                tools:layout_editor_absoluteX="@dimen/enter_text_editor_x"
+                tools:layout_editor_absoluteY="@dimen/enter_text_editor_y"></EditText>
 
             <Button
                 android:id="@+id/copy_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/copy_to_clipboard"
-                tools:layout_editor_absoluteX="184dp"
-                tools:layout_editor_absoluteY="34dp" />
+                tools:layout_editor_absoluteX="@dimen/translate_copy_paste_buttons_editor_x"
+                tools:layout_editor_absoluteY="@dimen/translate_copy_paste_buttons_editor_y" />
         </TableRow>
 
         <TableRow
@@ -57,8 +57,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/another_text_layout"
                     android:textSize="@dimen/text_size"
-                    tools:layout_editor_absoluteX="184dp"
-                    tools:layout_editor_absoluteY="34dp" />
+                    tools:layout_editor_absoluteX="@dimen/translate_copy_paste_buttons_editor_x"
+                    tools:layout_editor_absoluteY="@dimen/translate_copy_paste_buttons_editor_y" />
 
                 <Button
                     android:id="@+id/paste_button"
@@ -87,42 +87,42 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_numbers"
-                        tools:layout_editor_absoluteX="36dp"
-                        tools:layout_editor_absoluteY="386dp" />
+                        tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
+                        tools:layout_editor_absoluteY="@dimen/numbers_check_box_editor_y" />
 
                     <CheckBox
                         android:id="@+id/special_symb_check_box"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_special_symb"
-                        tools:layout_editor_absoluteX="36dp"
-                        tools:layout_editor_absoluteY="494dp" />
+                        tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
+                        tools:layout_editor_absoluteY="@dimen/special_symb_check_box_editor_y" />
 
                     <CheckBox
                         android:id="@+id/big_eng_check_box"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_big_eng"
-                        tools:layout_editor_absoluteX="36dp"
-                        tools:layout_editor_absoluteY="444dp" />
+                        tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
+                        tools:layout_editor_absoluteY="@dimen/big_eng_check_box_editor_y" />
                 </LinearLayout>
 
             </FrameLayout>
             <EditText
                 android:id="@+id/num_of_symbols_in_pswd"
-                android:layout_width="96dp"
+                android:layout_width="@dimen/num_of_symbols_in_pswd_width"
                 android:layout_height="wrap_content"
                 android:hint="@string/symbols_in_pswd"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="38dp"></EditText>
+                tools:layout_editor_absoluteX="@dimen/num_of_symbols_in_pswd_editor_x"
+                tools:layout_editor_absoluteY="@dimen/num_of_symbols_in_pswd_editor_y"></EditText>
 
             <Button
                 android:id="@+id/password_generate_button"
-                android:layout_width="174dp"
-                android:layout_height="62dp"
+                android:layout_width="@dimen/password_generate_button_width"
+                android:layout_height="@dimen/password_generate_button_height"
                 android:text="@string/password_generation_generate"
-                tools:layout_editor_absoluteX="44dp"
-                tools:layout_editor_absoluteY="554dp" />
+                tools:layout_editor_absoluteX="@dimen/password_generate_button_editor_x"
+                tools:layout_editor_absoluteY="@dimen/password_generate_button_editor_y" />
         </TableRow>
 
         <TableRow
@@ -130,32 +130,18 @@
             android:layout_height="match_parent" />
     </TableLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
     <TextView
         android:id="@+id/ready_password_text_view"
-        android:layout_width="160dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/ready_password_text_view_width"
+        android:layout_height="@dimen/pswd_strength_progress_bar_height"
         android:text="@string/ready_password" />
 
     <ProgressBar
         android:id="@+id/pswd_strength_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="250dp"
-        android:layout_height="24dp"
-        android:background="#95D3CD"
+        android:layout_width="@dimen/pswd_strength_progress_bar_width"
+        android:layout_height="@dimen/pswd_strength_progress_bar_height"
+        android:background="@color/teal_200"
         android:scrollbarSize="@dimen/scrollbar_size" />
 
 </LinearLayout>
