--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,60 @@
     android:background="@drawable/main_background"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/layout_row_height"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/enter_text"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:hint="@string/enter_text"
+            android:textSize="12sp"></EditText>
+
+        <ImageButton
+            android:id="@+id/copy_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:foreground="@mipmap/copy"></ImageButton>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/layout_row_height"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/another_layout_text_view"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_alignLeft="@+id/enter_text"
+            android:layout_alignRight="@+id/enter_text"
+            android:layout_marginLeft="8dp"
+            android:text="@string/paste_text"
+            android:textSize="12sp" />
+
+        <ImageButton
+            android:id="@+id/paste_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:foreground="@mipmap/paste"></ImageButton>
+
+        <Button
+            android:id="@+id/translate_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:text="@string/another_text_layout"
+            android:textSize="@dimen/text_size" />
+    </LinearLayout>
+
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -19,59 +73,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <EditText
-                android:id="@+id/enter_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_text"
-                tools:layout_editor_absoluteX="@dimen/enter_text_editor_x"
-                tools:layout_editor_absoluteY="@dimen/enter_text_editor_y"></EditText>
-
-            <Button
-                android:id="@+id/copy_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/copy_to_clipboard"
-                tools:layout_editor_absoluteX="@dimen/translate_copy_paste_buttons_editor_x"
-                tools:layout_editor_absoluteY="@dimen/translate_copy_paste_buttons_editor_y" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/another_layout_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/paste_text" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/translate_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/another_text_layout"
-                    android:textSize="@dimen/text_size"
-                    tools:layout_editor_absoluteX="@dimen/translate_copy_paste_buttons_editor_x"
-                    tools:layout_editor_absoluteY="@dimen/translate_copy_paste_buttons_editor_y" />
-
-                <Button
-                    android:id="@+id/paste_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/paste_from_clipboard" />
             </LinearLayout>
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -87,6 +100,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_numbers"
+                        android:textSize="12sp"
                         tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
                         tools:layout_editor_absoluteY="@dimen/numbers_check_box_editor_y" />
 
@@ -95,6 +109,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_special_symb"
+                        android:textSize="12sp"
                         tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
                         tools:layout_editor_absoluteY="@dimen/special_symb_check_box_editor_y" />
 
@@ -103,26 +118,44 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password_generation_big_eng"
+                        android:textSize="12sp"
                         tools:layout_editor_absoluteX="@dimen/check_box_editor_x"
                         tools:layout_editor_absoluteY="@dimen/big_eng_check_box_editor_y" />
                 </LinearLayout>
 
             </FrameLayout>
-            <EditText
-                android:id="@+id/num_of_symbols_in_pswd"
-                android:layout_width="@dimen/num_of_symbols_in_pswd_width"
-                android:layout_height="wrap_content"
-                android:hint="@string/symbols_in_pswd"
-                tools:layout_editor_absoluteX="@dimen/num_of_symbols_in_pswd_editor_x"
-                tools:layout_editor_absoluteY="@dimen/num_of_symbols_in_pswd_editor_y"></EditText>
 
-            <Button
-                android:id="@+id/password_generate_button"
-                android:layout_width="@dimen/password_generate_button_width"
-                android:layout_height="@dimen/password_generate_button_height"
-                android:text="@string/password_generation_generate"
-                tools:layout_editor_absoluteX="@dimen/password_generate_button_editor_x"
-                tools:layout_editor_absoluteY="@dimen/password_generate_button_editor_y" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/num_of_symbols_in_pswd"
+                    android:layout_width="@dimen/layout_row_height"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_marginTop="8dp"></EditText>
+
+                <TextView
+                    android:id="@+id/number_of_symbols_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/layout_row_height"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="символов" />
+
+                <Button
+                    android:id="@+id/password_generate_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/password_generate_button_height"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/password_generation_generate"
+                    android:textSize="8sp" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
@@ -136,12 +169,13 @@
         android:layout_height="@dimen/pswd_strength_progress_bar_height"
         android:text="@string/ready_password" />
 
-    <ProgressBar
+    <ImageView
         android:id="@+id/pswd_strength_progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="@dimen/pswd_strength_progress_bar_width"
+        android:src="@drawable/progress_bar_rectangle"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/pswd_strength_progress_bar_height"
-        android:background="@color/teal_200"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:scrollbarSize="@dimen/scrollbar_size" />
 
 </LinearLayout>
