--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E44C4A4A</color>
+    <color name="green_full">#FF02C678</color>
+    <color name="green_liht">#8BC34A</color>
+    <color name="green_yellow">#CDDC39</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="orange_light">#FFC107</color>
+    <color name="orange">#FF9800</color>
+    <color name="red_light">#FF5722</color>
+    <color name="red">#EA1202</color>
 </resources>
