--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,9 +174,9 @@
 
     <ImageView
         android:id="@+id/pswd_strength_progress_bar"
-        android:src="@drawable/progress_bar_rectangle_base"
+        android:src="@drawable/progress_bar_items"
         android:padding="2dp"
-        android:foreground="@drawable/stroke"
+        android:background="@drawable/progress_bar_rectangle_base"
         android:layout_width="match_parent"
         android:layout_height="@dimen/pswd_strength_progress_bar_height"
         android:layout_marginLeft="4dp"
