--- a/app/src/main/res/drawable/progress_bar_items.xml
+++ b/app/src/main/res/drawable/progress_bar_items.xml
@@ -2,18 +2,45 @@
 <level-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@drawable/progress_bar_rectangle_red"
-        android:maxLevel="1" />
+        android:maxLevel="1">
+        <clip xmlns:android="http://schemas.android.com/apk/res/android"
+            android:drawable="@drawable/progress_bar_rectangle_red"
+            android:clipOrientation="horizontal"
+            android:gravity="left">
+        </clip>
+    </item>
     <item
-        android:drawable="@drawable/progress_bar_rectangle_orange"
-        android:maxLevel="2" />
+        android:maxLevel="2">
+        <clip xmlns:android="http://schemas.android.com/apk/res/android"
+            android:drawable="@drawable/progress_bar_rectangle_orange"
+            android:clipOrientation="horizontal"
+            android:gravity="left">
+        </clip>
+    </item>
     <item
-        android:drawable="@drawable/progress_bar_rectangle_yellow"
-        android:maxLevel="3" />
+        android:maxLevel="3">
+        <clip xmlns:android="http://schemas.android.com/apk/res/android"
+            android:drawable="@drawable/progress_bar_rectangle_yellow"
+            android:clipOrientation="horizontal"
+            android:gravity="left">
+        </clip>
+    </item>
+
     <item
         android:drawable="@drawable/progress_bar_rectangle_green_yellow"
-        android:maxLevel="4" />
+        android:maxLevel="4">
+        <clip xmlns:android="http://schemas.android.com/apk/res/android"
+            android:drawable="@drawable/progress_bar_rectangle_green_yellow"
+            android:clipOrientation="horizontal"
+            android:gravity="left">
+        </clip>
+    </item>
     <item
-        android:drawable="@drawable/progress_bar_rectangle_green"
-        android:maxLevel="5" />
+        android:maxLevel="5">
+        <clip xmlns:android="http://schemas.android.com/apk/res/android"
+            android:drawable="@drawable/progress_bar_rectangle_green"
+            android:clipOrientation="horizontal"
+            android:gravity="left">
+        </clip>
+    </item>
 </level-list>
